@@ -14,6 +14,12 @@ Changelog
   from zest.releaser, it will not be run, because check-manifest has a separate
   hook for zest.releaser, so that would run it twice.
 
+- Allow private classifiers [hugovk]
+
+- Using tox to run tests [hugovk]
+
+- Deperating the support for setup.py
+
 
 4.2 (2023-02-25)
 ----------------
